[package]
name = "cloudformation-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.2"
aws-sdk-cloudformation = "0.28.0"
aws-sdk-dynamodb = "0.27.0"
aws-sdk-s3 = "0.27.0"
aws-types = "0.55.2"
clap = "4.3.0"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
zip = "0.6.6"
